--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./knightMoves.js" defer></script>
   </head>
   <body>
+    <h1>Knight travails</h1>
     <div id="chessboard">
       <div class="labels top-labels">
         <!-- Column labels -->
